--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@keystone-6/auth": "^4.0.0",
     "@keystone-6/core": "^2.1.0",
     "@prisma/client": "^4.1.1",
     "next": "12.2.4",
