--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix",
     "test": "jest --passWithNoTests",
     "test:coverage": "jest --passWithNoTests --coverage --changedSince=main --coverageThreshold='{\"global\":{\"statements\":\"80\",\"branches\":\"80\",\"functions\":\"80\",\"lines\":\"80\"}}'",
     "postinstall": "keystone postinstall",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@keystone-6/auth": "^4.0.0",
     "@keystone-6/core": "^2.1.0",
     "@prisma/client": "^4.1.1",
