--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint --fix",
     "test": "jest --passWithNoTests",
     "test:coverage": "jest --passWithNoTests --coverage --changedSince=main --coverageThreshold='{\"global\":{\"statements\":\"80\",\"branches\":\"80\",\"functions\":\"80\",\"lines\":\"80\"}}'",
     "postinstall": "keystone postinstall",
